classDiagram
    class NFA {
        -State initialState
        -State finalState
    }

    class State {
        -int number
        -List~Transition~ transitionsOut
    }

    class Transition {
        -OperationType operation
        -EditType editOperation
        -State fromState
        -State toState
        -GroupingPatternElement group
        -LineElement line
    }

    class NFASimulator {
        <<interface>>
    }

    class GreedyOnePassSimulator {
        -NFA nfa
        -int editDistance
        +simulate(lines) SimulationResult
    }

    class NFABuilder {
        +buildFromPattern(pattern) NFA
        +addState() State
        +addTransition(from, to, operation) Transition
    }

    class SimulationResult {
        -boolean success
        -Map~string, Object~ extractedData
        -int linesProcessed
        -int linesMatched
        -string failureReason
        +isSuccess() boolean
        +getExtractedData() Map~string, Object~
        +getLinesProcessed() int
        +getLinesMatched() int
        +getFailureReason() string
    }

    class OperationType {
        <<enumeration>>
        MatchLine
        OrSplit
        OrJoin
        RepeatZero
        RepeatOne
        RepeatMore
        RepeatAnyLineMore
        RepeatEnd
        StartGroup
        EndGroup
        StartContinuation
        EndContinuation
    }

    class GroupingPatternElement {
        <<abstract>>
    }

    class LineElement {
        <<abstract>>
    }

    class EditType {
        <<enumeration>>
        None
        Substitution
        Deletion
        Insertion
    }

    NFA --> State : initialState
    NFA --> State : finalState
    State --> Transition : transitionsOut
    Transition --> State : fromState
    Transition --> State : toState
    Transition --> OperationType
    Transition --> EditType
    Transition --> GroupingPatternElement : group
    Transition --> LineElement : line
    NFASimulator <|-- GreedyOnePassSimulator
    GreedyOnePassSimulator --> NFA
    GreedyOnePassSimulator --> SimulationResult : produces
    NFABuilder --> NFA : creates
    NFABuilder --> State : creates
    NFABuilder --> Transition : creates